
[package]
authors = ["Ryo ∴ SpiralArchitect <kishkavsesvit@icloud.com>"]
name = "st-frac"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "SpiralTorch fractional calculus (Grünwald–Letnikov) operators for tensors."

[dependencies]
ndarray = "0.15"
thiserror = "1"

[package.metadata.spiraltorch]
copyright = "© 2025 Ryo ∴ SpiralArchitect — All rights reserved"
