
[package]
name = "st-kv"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[features]
redis = ["dep:redis", "dep:serde", "dep:serde_json"]

[dependencies]
redis = { version = "0.23", optional = true }
serde = { version = "1.0", features=["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1"
