[package]
authors = ["Ryo ∴ SpiralArchitect <kishkavsesvit@icloud.com>"]
name = "st-kv"
version = "0.2.0"
edition = "2021"

[features]
redis = ["dep:redis", "dep:serde", "dep:serde_json"]

[dependencies]
redis = { version = "0.23", optional = true }
serde = { version = "1.0", features=["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1"

[package.metadata.spiraltorch]
copyright = "© 2025 Ryo ∴ SpiralArchitect — All rights reserved"
