[package]
authors = ["Ryo ∴ SpiralArchitect <kishkavsesvit@icloud.com>"]
name = "st-logic"
version = "0.2.0"
edition = "2021"

[features]
default = ["soft"]
soft = ["st-softlogic/soft"]
learn_store = ["st-softlogic/learn_store"]
nerf = ["dep:st-nn", "dep:st-vision"]

[dependencies]
thiserror = "1"
rand = "0.8"
num-complex = "0.4"
nalgebra = "0.32"
st-softlogic = { path = "../st-softlogic" }
st-nn = { path = "../st-nn", optional = true }
st-vision = { path = "../st-vision", optional = true }
st-tensor = { path = "../st-tensor" }

[package.metadata.spiraltorch]
copyright = "© 2025 Ryo ∴ SpiralArchitect — All rights reserved"
