[package]
authors = ["Ryo ∴ SpiralArchitect <kishkavsesvit@icloud.com>"]
name = "st-logic"
version = "0.2.0"
edition = "2021"

[features]
default = ["soft"]
soft = ["st-softlogic/soft"]
learn_store = ["dep:serde", "dep:serde_json", "st-softlogic/learn_store"]
nerf = []

[dependencies]
thiserror = "1"
rand = "0.8"
num-complex = "0.4"
nalgebra = "0.32"
st-softlogic = { path = "../st-softlogic" }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
st-tensor = { path = "../st-tensor" }

[package.metadata.spiraltorch]
copyright = "© 2025 Ryo ∴ SpiralArchitect — All rights reserved"
