[package]
authors = ["Ryo ∴ SpiralArchitect <kishkavsesvit@icloud.com>"]
name = "st-logic"
version = "0.3.0"
edition = "2021"
description = "Soft-logic, temporal dynamics, and quantum-reality helpers for SpiralTorch"
license = "AGPL-3.0-or-later"

[features]
default = ["soft"]
soft = ["st-softlogic/soft"]
learn_store = ["st-softlogic/learn_store"]
nerf = []

[dependencies]
thiserror = "2"
rand = "0.8"
num-complex = "0.4"
nalgebra = "0.32"
st-softlogic = { path = "../st-softlogic" }
st-core = { path = "../st-core", default-features = false }
st-tensor = { path = "../st-tensor", default-features = false, features = ["cpu", "faer"] }

[package.metadata.spiraltorch]
copyright = "© 2025 Ryo ∴ SpiralArchitect — All rights reserved"
