[package]
name = "st-metrics"
version = "0.1.0"
edition = "2021"
authors = ["SpiralTorch Contributors"]
description = "Lightweight registry for SpiralTorch training metrics"
license = "AGPL-3.0-or-later"

[features]
json = ["dep:serde_json"]
tracing = ["dep:tracing"]

[dependencies]
serde_json = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }
