[package]
authors = ["Ryo ∴ SpiralArchitect <kishkavsesvit@icloud.com>"]
name = "st-nn"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "High-level nn.Module-style API for SpiralTorch"

[lib]
name = "st_nn"
path = "src/lib.rs"

[features]
default = []
psi = ["st-core/psi"]
psychoid = ["st-core/psychoid"]
collapse = ["psi", "st-core/collapse"]
golden = ["st-core/golden"]
kdsl = ["st-core/kdsl"]
wgpu = ["st-core/wgpu", "st-tensor/wgpu"]

[dependencies]
st-tensor = { path = "../st-tensor" }
st-core = { path = "../st-core" }
st-frac = { path = "../st-frac" }
st-text = { path = "../st-text" }
futures = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"

[package.metadata.spiraltorch]
copyright = "© 2025 Ryo ∴ SpiralArchitect — All rights reserved"
