[package]
authors = ["Ryo ∴ SpiralArchitect <kishkavsesvit@icloud.com>"]
name = "st-nn"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "High-level nn.Module-style API for SpiralTorch"

[lib]
name = "st_nn"
path = "src/lib.rs"

[features]
default = ["selfsup"]
psi = ["st-core/psi"]
psychoid = ["st-core/psychoid"]
collapse = ["psi", "st-core/collapse"]
golden = ["st-core/golden"]
kdsl = ["st-core/kdsl"]
wgpu = ["st-core/wgpu", "st-tensor/wgpu"]
selfsup = []

[dependencies]
st-tensor = { path = "../st-tensor" }
st-core = { path = "../st-core" }
st-frac = { path = "../st-frac" }
st-text = { path = "../st-text" }
spiral-config = { path = "../spiral-config" }
futures = "0.3"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
thiserror = "2"
num-complex = "0.4"
nalgebra = "0.32"

[dev-dependencies]
tempfile = "3"

[package.metadata.spiraltorch]
copyright = "© 2025 Ryo ∴ SpiralArchitect — All rights reserved"

[[example]]
name = "ecosystem_integration_demo"
path = "../../examples/ecosystem_integration_demo.rs"

[[example]]
name = "fine_tune_with_selfsup"
path = "../../examples/fine_tune_with_selfsup.rs"

[[example]]
name = "modelzoo_mlp_regression"
path = "../../examples/modelzoo_mlp_regression.rs"

[[example]]
name = "modelzoo_zconv_classification"
path = "../../examples/modelzoo_zconv_classification.rs"

[[example]]
name = "zspace_trace_demo"
path = "../../examples/zspace_trace_demo.rs"

[[example]]
name = "planner_trace_demo"
path = "../../examples/planner_trace_demo.rs"

[[example]]
name = "layernorm_wgpu_demo"
path = "../../examples/layernorm_wgpu_demo.rs"
