[package]
name = "st-refract"
version = "0.1.0"
edition = "2021"
authors = ["Ryo ∴ SpiralArchitect <kishkavsesvit@icloud.com>"]
license = "AGPL-3.0-or-later"
description = "Lowering utilities for mapping SpiralK soft-logic directives to the kernel DSL"

[dependencies]
anyhow = "1"
st-softlogic = { path = "../st-softlogic" }

[package.metadata.spiraltorch]
copyright = "© 2025 Ryo ∴ SpiralArchitect — All rights reserved"
