[package]
name = "st-softlogic"
version = "0.2.0"
edition = "2021"
authors = ["Ryo ∴ SpiralArchitect <kishkavsesvit@icloud.com>"]
license = "AGPL-3.0-or-later"
description = "Shared soft logic primitives for SpiralTorch heuristics"

[features]
default = ["soft"]
soft = []
learn_store = ["dep:serde_json", "dep:tempfile", "dep:thiserror"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
tempfile = { version = "3", optional = true }
thiserror = { version = "2", optional = true }

[package.metadata.spiraltorch]
copyright = "© 2025 Ryo ∴ SpiralArchitect — All rights reserved"
